[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "console_save"
version = "0.0.3"
authors = [
  { name="NRK HMB", email="74872995+Nikolasitude@users.noreply.github.com"},
]
description = "Package that lets you register/save what you do in the interactive python console"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Nikolasitude/Interactive-Python/"
Issues = "https://github.com/Nikolasitude/Interactive-Python/issues"